--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nanoid": "^4.0.0",
+    "nodemon": "^2.0.19"
   },
   "name": "signup",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node signupserver.mjs"
+    "start": "node signupserver.mjs",
+    "dev": "nodemon index.html"
   },
   "repository": {
     "type": "git",
