--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongodb": "^4.8.1",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.19"
   },
